Corrigindo bug do navigation z-index

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -165,6 +165,7 @@ img {
   left: 0;
   width: 100%;
   background-color: var(--body-color);
+  z-index: var(--z-fixed);
 }
 
 .nav{
